parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> BEGIN statement_list END
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> identifier
Rule 5     statement -> expression
Rule 6     statement -> if_statement
Rule 7     identifier -> IDENTIFIER
Rule 8     statement -> EXIT
Rule 9     primitive -> NUM_INT
Rule 10    primitive -> NUM_FLOAT
Rule 11    primitive -> STRING
Rule 12    primitive -> boolean
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression MUL expression
Rule 16    expression -> expression DIV expression
Rule 17    expression -> expression EXP expression
Rule 18    expression -> expression MOD expression
Rule 19    expression -> expression BIT_AND expression
Rule 20    expression -> expression BIT_OR expression
Rule 21    expression -> expression BIT_XOR expression
Rule 22    expression -> expression LSHIFT expression
Rule 23    expression -> expression RSHIFT expression
Rule 24    boolean -> expression EQ expression
Rule 25    boolean -> expression NEQ expression
Rule 26    boolean -> expression GT expression
Rule 27    boolean -> expression GTE expression
Rule 28    boolean -> expression LT expression
Rule 29    boolean -> expression LTE expression
Rule 30    boolean -> expression AND expression
Rule 31    boolean -> expression OR expression
Rule 32    expression -> MINUS expression
Rule 33    expression -> PLUS expression
Rule 34    expression -> BIT_NEG expression
Rule 35    expression -> NOT expression
Rule 36    expression -> LPAREN expression RPAREN
Rule 37    boolean -> TRUE
Rule 38    boolean -> FALSE
Rule 39    assignable -> primitive
Rule 40    assignable -> expression
Rule 41    arguments -> arguments COMMA expression
Rule 42    arguments -> expression
Rule 43    arguments -> <empty>
Rule 44    expression -> LSQBRACK arguments RSQBRACK
Rule 45    expression -> identifier LSQBRACK expression RSQBRACK
Rule 46    expression -> identifier LSQBRACK expression COLON expression RSQBRACK
Rule 47    expression -> identifier LSQBRACK COLON expression RSQBRACK
Rule 48    expression -> identifier LSQBRACK expression COLON RSQBRACK
Rule 49    expression -> identifier LSQBRACK COLON RSQBRACK
Rule 50    statement -> identifier LSQBRACK expression RSQBRACK EQUALS expression
Rule 51    expression -> identifier EQUALS assignable
Rule 52    if_statement -> IF expression THEN LBRACK statement_list RBRACK
Rule 53    if_statement -> IF expression THEN LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
Rule 54    if_statement -> IF expression THEN LBRACK statement_list RBRACK ELSE if_statement
Rule 55    expression -> expression IN expression
Rule 56    expression -> expression NOT IN expression
Rule 57    statement -> SETOUT LPAREN arguments RPAREN
Rule 58    statement -> identifier PLUS_EQ expression
Rule 59    statement -> identifier MINUS_EQ expression
Rule 60    statement -> identifier MUL_EQ expression
Rule 61    statement -> identifier DIV_EQ expression
Rule 62    statement -> identifier EXP_EQ expression
Rule 63    statement -> identifier MOD_EQ expression
Rule 64    expression -> identifier PLUS_EQUAL primitive
Rule 65    expression -> identifier MINUS_EQUAL primitive
Rule 66    expression -> primitive
Rule 67    expression -> STRING
Rule 68    expression -> identifier
Rule 69    statement -> FOR identifier IN expression ARROW_LTR expression DO LBRACK statement_list RBRACK
Rule 70    statement -> FOR identifier IN expression ARROW_RTL expression DO LBRACK statement_list RBRACK
Rule 71    statement -> FOR identifier IN expression LBRACK statement_list RBRACK
Rule 72    statement -> WHILE expression DO LBRACK statement_list RBRACK
Rule 73    statement -> PROCESS identifier DO LBRACK statement_list RBRACK
Rule 74    expression -> identifier LPAREN arguments RPAREN
Rule 75    statement -> identifier LPAREN arguments RPAREN

Terminals, with rules where they appear

AND                  : 30
ARROW_LTR            : 69
ARROW_RTL            : 70
BEGIN                : 1
BIT_AND              : 19
BIT_NEG              : 34
BIT_OR               : 20
BIT_XOR              : 21
COLON                : 46 47 48 49
COMMA                : 41
DIV                  : 16
DIV_EQ               : 61
DO                   : 69 70 72 73
ELSE                 : 53 54
END                  : 1
EQ                   : 24
EQUALS               : 50 51
EXIT                 : 8
EXP                  : 17
EXP_EQ               : 62
FALSE                : 38
FOR                  : 69 70 71
GT                   : 26
GTE                  : 27
IDENTIFIER           : 7
IF                   : 52 53 54
IN                   : 55 56 69 70 71
LBRACK               : 52 53 53 54 69 70 71 72 73
LPAREN               : 36 57 74 75
LSHIFT               : 22
LSQBRACK             : 44 45 46 47 48 49 50
LT                   : 28
LTE                  : 29
MINUS                : 14 32
MINUS_EQ             : 59
MINUS_EQUAL          : 65
MOD                  : 18
MOD_EQ               : 63
MUL                  : 15
MUL_EQ               : 60
NEQ                  : 25
NEWLINE              : 
NOT                  : 35 56
NUM_FLOAT            : 10
NUM_INT              : 9
OR                   : 31
PLUS                 : 13 33
PLUS_EQ              : 58
PLUS_EQUAL           : 64
PROCESS              : 73
RBRACK               : 52 53 53 54 69 70 71 72 73
RPAREN               : 36 57 74 75
RSHIFT               : 23
RSQBRACK             : 44 45 46 47 48 49 50
SETOUT               : 57
STRING               : 11 67
THEN                 : 52 53 54
TRUE                 : 37
WHILE                : 72
error                : 

Nonterminals, with rules where they appear

arguments            : 41 44 57 74 75
assignable           : 51
boolean              : 12
expression           : 5 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 35 36 40 41 42 45 46 46 47 48 50 50 52 53 54 55 55 56 56 58 59 60 61 62 63 69 69 70 70 71 72
identifier           : 4 45 46 47 48 49 50 51 58 59 60 61 62 63 64 65 68 69 70 71 73 74 75
if_statement         : 6 54
primitive            : 39 64 65 66
program              : 0
statement            : 2 3
statement_list       : 1 3 52 53 53 54 69 70 71 72 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . BEGIN statement_list END

    BEGIN           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> BEGIN . statement_list END
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . identifier
    (5) statement -> . expression
    (6) statement -> . if_statement
    (8) statement -> . EXIT
    (50) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression
    (57) statement -> . SETOUT LPAREN arguments RPAREN
    (58) statement -> . identifier PLUS_EQ expression
    (59) statement -> . identifier MINUS_EQ expression
    (60) statement -> . identifier MUL_EQ expression
    (61) statement -> . identifier DIV_EQ expression
    (62) statement -> . identifier EXP_EQ expression
    (63) statement -> . identifier MOD_EQ expression
    (69) statement -> . FOR identifier IN expression ARROW_LTR expression DO LBRACK statement_list RBRACK
    (70) statement -> . FOR identifier IN expression ARROW_RTL expression DO LBRACK statement_list RBRACK
    (71) statement -> . FOR identifier IN expression LBRACK statement_list RBRACK
    (72) statement -> . WHILE expression DO LBRACK statement_list RBRACK
    (73) statement -> . PROCESS identifier DO LBRACK statement_list RBRACK
    (75) statement -> . identifier LPAREN arguments RPAREN
    (7) identifier -> . IDENTIFIER
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression BIT_AND expression
    (20) expression -> . expression BIT_OR expression
    (21) expression -> . expression BIT_XOR expression
    (22) expression -> . expression LSHIFT expression
    (23) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . PLUS expression
    (34) expression -> . BIT_NEG expression
    (35) expression -> . NOT expression
    (36) expression -> . LPAREN expression RPAREN
    (44) expression -> . LSQBRACK arguments RSQBRACK
    (45) expression -> . identifier LSQBRACK expression RSQBRACK
    (46) expression -> . identifier LSQBRACK expression COLON expression RSQBRACK
    (47) expression -> . identifier LSQBRACK COLON expression RSQBRACK
    (48) expression -> . identifier LSQBRACK expression COLON RSQBRACK
    (49) expression -> . identifier LSQBRACK COLON RSQBRACK
    (51) expression -> . identifier EQUALS assignable
    (55) expression -> . expression IN expression
    (56) expression -> . expression NOT IN expression
    (64) expression -> . identifier PLUS_EQUAL primitive
    (65) expression -> . identifier MINUS_EQUAL primitive
    (66) expression -> . primitive
    (67) expression -> . STRING
    (68) expression -> . identifier
    (74) expression -> . identifier LPAREN arguments RPAREN
    (52) if_statement -> . IF expression THEN LBRACK statement_list RBRACK
    (53) if_statement -> . IF expression THEN LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
    (54) if_statement -> . IF expression THEN LBRACK statement_list RBRACK ELSE if_statement
    (9) primitive -> . NUM_INT
    (10) primitive -> . NUM_FLOAT
    (11) primitive -> . STRING
    (12) primitive -> . boolean
    (24) boolean -> . expression EQ expression
    (25) boolean -> . expression NEQ expression
    (26) boolean -> . expression GT expression
    (27) boolean -> . expression GTE expression
    (28) boolean -> . expression LT expression
    (29) boolean -> . expression LTE expression
    (30) boolean -> . expression AND expression
    (31) boolean -> . expression OR expression
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    EXIT            shift and go to state 8
    SETOUT          shift and go to state 10
    FOR             shift and go to state 12
    WHILE           shift and go to state 13
    PROCESS         shift and go to state 14
    IDENTIFIER      shift and go to state 15
    MINUS           shift and go to state 17
    PLUS            shift and go to state 16
    BIT_NEG         shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 11
    LSQBRACK        shift and go to state 9
    STRING          shift and go to state 21
    IF              shift and go to state 22
    NUM_INT         shift and go to state 23
    NUM_FLOAT       shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    identifier                     shift and go to state 5
    expression                     shift and go to state 6
    if_statement                   shift and go to state 7
    primitive                      shift and go to state 20
    boolean                        shift and go to state 25

state 3

    (1) program -> BEGIN statement_list . END
    (3) statement_list -> statement_list . statement
    (4) statement -> . identifier
    (5) statement -> . expression
    (6) statement -> . if_statement
    (8) statement -> . EXIT
    (50) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression
    (57) statement -> . SETOUT LPAREN arguments RPAREN
    (58) statement -> . identifier PLUS_EQ expression
    (59) statement -> . identifier MINUS_EQ expression
    (60) statement -> . identifier MUL_EQ expression
    (61) statement -> . identifier DIV_EQ expression
    (62) statement -> . identifier EXP_EQ expression
    (63) statement -> . identifier MOD_EQ expression
    (69) statement -> . FOR identifier IN expression ARROW_LTR expression DO LBRACK statement_list RBRACK
    (70) statement -> . FOR identifier IN expression ARROW_RTL expression DO LBRACK statement_list RBRACK
    (71) statement -> . FOR identifier IN expression LBRACK statement_list RBRACK
    (72) statement -> . WHILE expression DO LBRACK statement_list RBRACK
    (73) statement -> . PROCESS identifier DO LBRACK statement_list RBRACK
    (75) statement -> . identifier LPAREN arguments RPAREN
    (7) identifier -> . IDENTIFIER
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression BIT_AND expression
    (20) expression -> . expression BIT_OR expression
    (21) expression -> . expression BIT_XOR expression
    (22) expression -> . expression LSHIFT expression
    (23) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . PLUS expression
    (34) expression -> . BIT_NEG expression
    (35) expression -> . NOT expression
    (36) expression -> . LPAREN expression RPAREN
    (44) expression -> . LSQBRACK arguments RSQBRACK
    (45) expression -> . identifier LSQBRACK expression RSQBRACK
    (46) expression -> . identifier LSQBRACK expression COLON expression RSQBRACK
    (47) expression -> . identifier LSQBRACK COLON expression RSQBRACK
    (48) expression -> . identifier LSQBRACK expression COLON RSQBRACK
    (49) expression -> . identifier LSQBRACK COLON RSQBRACK
    (51) expression -> . identifier EQUALS assignable
    (55) expression -> . expression IN expression
    (56) expression -> . expression NOT IN expression
    (64) expression -> . identifier PLUS_EQUAL primitive
    (65) expression -> . identifier MINUS_EQUAL primitive
    (66) expression -> . primitive
    (67) expression -> . STRING
    (68) expression -> . identifier
    (74) expression -> . identifier LPAREN arguments RPAREN
    (52) if_statement -> . IF expression THEN LBRACK statement_list RBRACK
    (53) if_statement -> . IF expression THEN LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
    (54) if_statement -> . IF expression THEN LBRACK statement_list RBRACK ELSE if_statement
    (9) primitive -> . NUM_INT
    (10) primitive -> . NUM_FLOAT
    (11) primitive -> . STRING
    (12) primitive -> . boolean
    (24) boolean -> . expression EQ expression
    (25) boolean -> . expression NEQ expression
    (26) boolean -> . expression GT expression
    (27) boolean -> . expression GTE expression
    (28) boolean -> . expression LT expression
    (29) boolean -> . expression LTE expression
    (30) boolean -> . expression AND expression
    (31) boolean -> . expression OR expression
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    END             shift and go to state 28
    EXIT            shift and go to state 8
    SETOUT          shift and go to state 10
    FOR             shift and go to state 12
    WHILE           shift and go to state 13
    PROCESS         shift and go to state 14
    IDENTIFIER      shift and go to state 15
    MINUS           shift and go to state 17
    PLUS            shift and go to state 16
    BIT_NEG         shift and go to state 18
    NOT             shift and go to state 19
    LPAREN          shift and go to state 11
    LSQBRACK        shift and go to state 9
    STRING          shift and go to state 21
    IF              shift and go to state 22
    NUM_INT         shift and go to state 23
    NUM_FLOAT       shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    statement                      shift and go to state 29
    identifier                     shift and go to state 5
    expression                     shift and go to state 6
    if_statement                   shift and go to state 7
    primitive                      shift and go to state 20
    boolean                        shift and go to state 25

state 4

    (2) statement_list -> statement .

    END             reduce using rule 2 (statement_list -> statement .)
    EXIT            reduce using rule 2 (statement_list -> statement .)
    SETOUT          reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    PROCESS         reduce using rule 2 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    MINUS           reduce using rule 2 (statement_list -> statement .)
    PLUS            reduce using rule 2 (statement_list -> statement .)
    BIT_NEG         reduce using rule 2 (statement_list -> statement .)
    NOT             reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    LSQBRACK        reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    NUM_INT         reduce using rule 2 (statement_list -> statement .)
    NUM_FLOAT       reduce using rule 2 (statement_list -> statement .)
    TRUE            reduce using rule 2 (statement_list -> statement .)
    FALSE           reduce using rule 2 (statement_list -> statement .)
    RBRACK          reduce using rule 2 (statement_list -> statement .)


state 5

    (4) statement -> identifier .
    (50) statement -> identifier . LSQBRACK expression RSQBRACK EQUALS expression
    (58) statement -> identifier . PLUS_EQ expression
    (59) statement -> identifier . MINUS_EQ expression
    (60) statement -> identifier . MUL_EQ expression
    (61) statement -> identifier . DIV_EQ expression
    (62) statement -> identifier . EXP_EQ expression
    (63) statement -> identifier . MOD_EQ expression
    (75) statement -> identifier . LPAREN arguments RPAREN
    (45) expression -> identifier . LSQBRACK expression RSQBRACK
    (46) expression -> identifier . LSQBRACK expression COLON expression RSQBRACK
    (47) expression -> identifier . LSQBRACK COLON expression RSQBRACK
    (48) expression -> identifier . LSQBRACK expression COLON RSQBRACK
    (49) expression -> identifier . LSQBRACK COLON RSQBRACK
    (51) expression -> identifier . EQUALS assignable
    (64) expression -> identifier . PLUS_EQUAL primitive
    (65) expression -> identifier . MINUS_EQUAL primitive
    (68) expression -> identifier .
    (74) expression -> identifier . LPAREN arguments RPAREN

  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! reduce/reduce conflict for PLUS resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for MINUS resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for NOT resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for END resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for EXIT resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for SETOUT resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for FOR resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for WHILE resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for PROCESS resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for BIT_NEG resolved using rule 4 (statement -> identifier .)
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! reduce/reduce conflict for STRING resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for IF resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for NUM_INT resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for NUM_FLOAT resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for TRUE resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for FALSE resolved using rule 4 (statement -> identifier .)
  ! reduce/reduce conflict for RBRACK resolved using rule 4 (statement -> identifier .)
    END             reduce using rule 4 (statement -> identifier .)
    EXIT            reduce using rule 4 (statement -> identifier .)
    SETOUT          reduce using rule 4 (statement -> identifier .)
    FOR             reduce using rule 4 (statement -> identifier .)
    WHILE           reduce using rule 4 (statement -> identifier .)
    PROCESS         reduce using rule 4 (statement -> identifier .)
    IDENTIFIER      reduce using rule 4 (statement -> identifier .)
    MINUS           reduce using rule 4 (statement -> identifier .)
    PLUS            reduce using rule 4 (statement -> identifier .)
    BIT_NEG         reduce using rule 4 (statement -> identifier .)
    NOT             reduce using rule 4 (statement -> identifier .)
    STRING          reduce using rule 4 (statement -> identifier .)
    IF              reduce using rule 4 (statement -> identifier .)
    NUM_INT         reduce using rule 4 (statement -> identifier .)
    NUM_FLOAT       reduce using rule 4 (statement -> identifier .)
    TRUE            reduce using rule 4 (statement -> identifier .)
    FALSE           reduce using rule 4 (statement -> identifier .)
    RBRACK          reduce using rule 4 (statement -> identifier .)
    LSQBRACK        shift and go to state 30
    PLUS_EQ         shift and go to state 32
    MINUS_EQ        shift and go to state 33
    MUL_EQ          shift and go to state 34
    DIV_EQ          shift and go to state 35
    EXP_EQ          shift and go to state 36
    MOD_EQ          shift and go to state 37
    LPAREN          shift and go to state 38
    EQUALS          shift and go to state 31
    PLUS_EQUAL      shift and go to state 39
    MINUS_EQUAL     shift and go to state 40
    MUL             reduce using rule 68 (expression -> identifier .)
    DIV             reduce using rule 68 (expression -> identifier .)
    EXP             reduce using rule 68 (expression -> identifier .)
    MOD             reduce using rule 68 (expression -> identifier .)
    BIT_AND         reduce using rule 68 (expression -> identifier .)
    BIT_OR          reduce using rule 68 (expression -> identifier .)
    BIT_XOR         reduce using rule 68 (expression -> identifier .)
    LSHIFT          reduce using rule 68 (expression -> identifier .)
    RSHIFT          reduce using rule 68 (expression -> identifier .)
    IN              reduce using rule 68 (expression -> identifier .)
    EQ              reduce using rule 68 (expression -> identifier .)
    NEQ             reduce using rule 68 (expression -> identifier .)
    GT              reduce using rule 68 (expression -> identifier .)
    GTE             reduce using rule 68 (expression -> identifier .)
    LT              reduce using rule 68 (expression -> identifier .)
    LTE             reduce using rule 68 (expression -> identifier .)
    AND             reduce using rule 68 (expression -> identifier .)
    OR              reduce using rule 68 (expression -> identifier .)

  ! LPAREN          [ reduce using rule 4 (statement -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 4 (statement -> identifier .) ]
  ! PLUS            [ reduce using rule 68 (expression -> identifier .) ]
  ! MINUS           [ reduce using rule 68 (expression -> identifier .) ]
  ! NOT             [ reduce using rule 68 (expression -> identifier .) ]
  ! END             [ reduce using rule 68 (expression -> identifier .) ]
  ! EXIT            [ reduce using rule 68 (expression -> identifier .) ]
  ! SETOUT          [ reduce using rule 68 (expression -> identifier .) ]
  ! FOR             [ reduce using rule 68 (expression -> identifier .) ]
  ! WHILE           [ reduce using rule 68 (expression -> identifier .) ]
  ! PROCESS         [ reduce using rule 68 (expression -> identifier .) ]
  ! IDENTIFIER      [ reduce using rule 68 (expression -> identifier .) ]
  ! BIT_NEG         [ reduce using rule 68 (expression -> identifier .) ]
  ! LPAREN          [ reduce using rule 68 (expression -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 68 (expression -> identifier .) ]
  ! STRING          [ reduce using rule 68 (expression -> identifier .) ]
  ! IF              [ reduce using rule 68 (expression -> identifier .) ]
  ! NUM_INT         [ reduce using rule 68 (expression -> identifier .) ]
  ! NUM_FLOAT       [ reduce using rule 68 (expression -> identifier .) ]
  ! TRUE            [ reduce using rule 68 (expression -> identifier .) ]
  ! FALSE           [ reduce using rule 68 (expression -> identifier .) ]
  ! RBRACK          [ reduce using rule 68 (expression -> identifier .) ]


state 6

    (5) statement -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIV expression
    (17) expression -> expression . EXP expression
    (18) expression -> expression . MOD expression
    (19) expression -> expression . BIT_AND expression
    (20) expression -> expression . BIT_OR expression
    (21) expression -> expression . BIT_XOR expression
    (22) expression -> expression . LSHIFT expression
    (23) expression -> expression . RSHIFT expression
    (55) expression -> expression . IN expression
    (56) expression -> expression . NOT IN expression
    (24) boolean -> expression . EQ expression
    (25) boolean -> expression . NEQ expression
    (26) boolean -> expression . GT expression
    (27) boolean -> expression . GTE expression
    (28) boolean -> expression . LT expression
    (29) boolean -> expression . LTE expression
    (30) boolean -> expression . AND expression
    (31) boolean -> expression . OR expression
